2003-12-16  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpSimpleClientProtocol.cs: Do not encode the request url, since it is
	  already encoded by the MimeParameterWriter.
	* MatchAttribute.cs: Set default value for Group to 1.
	* TextReturnReader.cs: Implemented. With this it is possible to create an
	  XML web service that parse the contents of a web page.

2003-12-15  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpSoapWebServiceHandler.cs: Added check for valid SOAPAction header.
	  Fixed bug when routing style is RequestElement.
	  Removed GetMethodFromAction. This is done now in the type stub.
	  Other minor fixes.
	* Methods.cs, WebServiceHelper.cs: Faults are always serialized using 
	  literal format. Removed unneded code.
	
2003-12-12  Lluis Sanchez Gual <lluis@ximian.com>

	* Methods.cs: Added special handling for RPC format.
	
2003-11-27  Lluis Sanchez Gual <lluis@ximian.com>

	* Methods.cs: Added correct namespace for serialization in Fault class.
	* SoapHttpClientProtocol.cs: Changed the method used to check if the
	  result is a fault. Now the check is done inside 
	  WebServiceHelper.ReadSoapMessage. Removed some debug writelines.
	* WebServiceHelper.cs: If the message body is a fault, use the fault
	  serializer.

2003-11-24  Lluis Sanchez Gual <lluis@ximian.com>

	* Methods.cs, TypeStubManager.cs, SoapMessage.cs: Removed TODO comment.
	* SoapDocumentationHandler.cs: Check that the documentation page exist.
	* SoapHttpClientProtocol.cs: Removed cast from WebResponse to
	  HttpWebResponse. This fixes bug #51281.

2003-11-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpSoapWebServiceHandler.cs: WebException is ok here for wrong 
	content encoding...
	* SoapHttpClientProtocol.cs: ... but here, we should throw an
	InvalidOperationException including the full response.

	* WebServiceHelper.cs:
	(GetContentEncoding): now fills an output variable with the name of the
	content encoding used.
	(InvalidOperation): new method to build the message for